--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.JFX.classpath}
+    ${libs.JFX.classpath}:\
+    ${libs.Charts.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
